@@ -35,7 +35,8 @@ class CharlieRoseIE(InfoExtractor):
         title = remove_end(self._og_search_title(webpage), ' - Charlie Rose')
 
         info_dict = self._parse_html5_media_entries(
-            self._PLAYER_BASE % video_id, webpage, video_id)[0]
+            self._PLAYER_BASE % video_id, webpage, video_id,
+            m3u8_entry_protocol='m3u8_native')[0]
 
         self._sort_formats(info_dict['formats'])
         self._remove_duplicate_formats(info_dict['formats'])
